--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -1,8 +1,9 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+@article{xu2021spatiotemporal,
+  title={Spatiotemporal Pattern Mining of Drought in the Last 40 Years in China Based on the SPEI and Space--Time Cube},
+  author={Xu, Dehe and Zhang, Qi and Ding, Yan and Zhang, De},
+  journal={Journal of Applied Meteorology and Climatology},
+  volume={60},
+  number={9},
+  pages={1219--1230},
+  year={2021}
 }
